Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -20,9 +20,34 @@
 
     <section class="main-content">
       <h1>
-<a id="recaptcha-plugin-for-net" class="anchor" href="#recaptcha-plugin-for-net" aria-hidden="true"><span class="octicon octicon-link"></span></a>reCAPTCHA plugin for .NET</h1>
+<a id="welcome-to-recaptcha-plugin-for-net" class="anchor" href="#welcome-to-recaptcha-plugin-for-net" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to reCAPTCHA plugin for .NET</h1>
 
-<p>Google reCAPTCHA plugin for ASP.NET Web Forms / MVC Application.</p>
+<p>reCAPTCHA plugin for .NET is an open source .NET Class that allows developers to easily use Google's reCAPTCHA in ASP.NET web forms and MVC web applications.</p>
+
+<h3>
+<a id="features" class="anchor" href="#features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Features</h3>
+
+<p>The primary features of the Class are:</p>
+
+<ul>
+<li>Render recaptcha control (HTML) with appropriate options for pre-defined themes and culture (language).</li>
+<li>Verify user's answer to recaptcha's challenge.</li>
+<li>Supports ASP.NET Web Forms and ASP.NET MVC.</li>
+</ul>
+
+<h3>
+<a id="api-support" class="anchor" href="#api-support" aria-hidden="true"><span class="octicon octicon-link"></span></a>API Support</h3>
+
+<p>The Class only supports Google's reCATPCAH API version 2.</p>
+
+<h3>
+<a id="creating-a-recaptcha-keys" class="anchor" href="#creating-a-recaptcha-keys" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating a reCAPTCHA Keys</h3>
+
+<p>Before you can use reCAPTCHA in your web application, you must first create a reCAPTCHA key (a pair of public and private keys). Creating reCAPTCHA key is very straight-forward. The following are the steps:
+1. Go to the Google's reCAPTCHA site.
+2. Click on the Get reCAPTCHA button. You will be required to login with your Google account.
+3. Enter a label for this reCAPTCHA and the domain of your web application. You can enter more than one domain if you want to.
+4. Expand Keys under the Adding reCAPTCHA to your site section. Note down your Site Key and Secret Key.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/nyubai/recaptcha-net">reCAPTCHA plugin for .NET</a> is maintained by <a href="https://github.com/nyubai">nyubai</a>.</span>
