Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -43,11 +43,14 @@
 <h3>
 <a id="creating-a-recaptcha-keys" class="anchor" href="#creating-a-recaptcha-keys" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating a reCAPTCHA Keys</h3>
 
-<p>Before you can use reCAPTCHA in your web application, you must first create a reCAPTCHA key (a pair of public and private keys). Creating reCAPTCHA key is very straight-forward. The following are the steps:
-1.Go to the Google's reCAPTCHA site.
-2.Click on the Get reCAPTCHA button. You will be required to login with your Google account.
-3.Enter a label for this reCAPTCHA and the domain of your web application. You can enter more than one domain if you want to.
-4.Expand Keys under the Adding reCAPTCHA to your site section. Note down your Site Key and Secret Key.</p>
+<p>Before you can use reCAPTCHA in your web application, you must first create a reCAPTCHA key (a pair of public and private keys). Creating reCAPTCHA key is very straight-forward. The following are the steps:</p>
+
+<ol>
+<li>Go to the Google's reCAPTCHA site.</li>
+<li>Click on the Get reCAPTCHA button. You will be required to login with your Google account.</li>
+<li>Enter a label for this reCAPTCHA and the domain of your web application. You can enter more than one domain if you want to.</li>
+<li>Expand Keys under the Adding reCAPTCHA to your site section. Note down your Site Key and Secret Key.</li>
+</ol>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/nyubai/recaptcha-net">reCAPTCHA plugin for .NET</a> is maintained by <a href="https://github.com/nyubai">nyubai</a>.</span>
